// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design management design index page renders design index 1`] = `
<div
  class="design-detail fixed-top w-100 position-bottom-0 d-flex justify-content-center flex-column flex-lg-row"
>
  <div
    class="d-flex overflow-hidden flex-lg-grow-1 flex-column"
  >
    <design-destroyer-stub
      filenames="test.jpg"
      iid="1"
      projectpath=""
    />
     
    <div
      class="d-flex flex-column h-100 mh-100 position-relative"
    >
      <div
        class="p-3"
      >
        <!---->
      </div>
       
      <design-image-stub
        image="test.jpg"
        name="test.jpg"
      />
       
      <design-overlay-stub
        notes="[object Object]"
        position="[object Object]"
      />
    </div>
  </div>
   
  <div
    class="image-notes"
  >
    <h2
      class="gl-font-size-20 font-weight-bold mt-0"
    >
      My precious issue
    </h2>
     
    <a
      class="text-tertiary text-decoration-none mb-3 d-block"
      href="full-issue-url"
    >
      ull-issue-path
    </a>
     
    <participants-stub
      class="mb-4"
      numberoflessparticipants="7"
      participants="[object Object]"
    />
     
    <design-discussion-stub
      designid="1"
      discussion="[object Object]"
      discussionindex="1"
      markdownpreviewpath="//preview_markdown?target_type=Issue"
      noteableid="design-id"
    />
     
    <!---->
  </div>
</div>
`;

exports[`Design management design index page sets loading state 1`] = `
<div
  class="design-detail fixed-top w-100 position-bottom-0 d-flex justify-content-center flex-column flex-lg-row"
>
  <gl-loading-icon-stub
    class="align-self-center"
    color="orange"
    label="Loading"
    size="xl"
  />
</div>
`;

exports[`Design management design index page with error GlAlert is rendered in correct position with correct content 1`] = `
<div
  class="design-detail fixed-top w-100 position-bottom-0 d-flex justify-content-center flex-column flex-lg-row"
>
  <div
    class="d-flex overflow-hidden flex-lg-grow-1 flex-column"
  >
    <design-destroyer-stub
      filenames="test.jpg"
      iid="1"
      projectpath=""
    />
     
    <div
      class="d-flex flex-column h-100 mh-100 position-relative"
    >
      <div
        class="p-3"
      >
        <gl-alert-stub
          dismissible="true"
          dismisslabel="Dismiss"
          primarybuttonlink=""
          primarybuttontext=""
          secondarybuttonlink=""
          secondarybuttontext=""
          title=""
          variant="danger"
        >
          
            woops
          
        </gl-alert-stub>
      </div>
       
      <design-image-stub
        image="test.jpg"
        name="test.jpg"
      />
       
      <design-overlay-stub
        notes=""
        position="[object Object]"
      />
    </div>
  </div>
   
  <div
    class="image-notes"
  >
    <h2
      class="gl-font-size-20 font-weight-bold mt-0"
    >
      My precious issue
    </h2>
     
    <a
      class="text-tertiary text-decoration-none mb-3 d-block"
      href="full-issue-url"
    >
      ull-issue-path
    </a>
     
    <participants-stub
      class="mb-4"
      numberoflessparticipants="7"
      participants="[object Object]"
    />
     
    <h2
      class="new-discussion-disclaimer gl-font-size-14 m-0"
    >
      
        Click the image where you'd like to start a new discussion
      
    </h2>
  </div>
</div>
`;
